WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43760
[GTK] Inputs of type 'search' have weird looking checkboxes instead of search/clear icons
https://bugs.webkit.org/show_bug.cgi?id=43760
Summary
[GTK] Inputs of type 'search' have weird looking checkboxes instead of search...
Gustavo Noronha (kov)
Reported
2010-08-09 17:08:14 PDT
Subject says it all. If you have, say, <input type="search" results="0"> this should be drawing a nice search icon in the left corner of the entry, and a clear icon in the right corner, when something is entered, but we get weird checkboxes instead.
Attachments
proposed patch
(3.27 KB, patch)
2010-08-09 17:13 PDT
,
Gustavo Noronha (kov)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gustavo Noronha (kov)
Comment 1
2010-08-09 17:13:39 PDT
Created
attachment 63958
[details]
proposed patch
Xan Lopez
Comment 2
2010-08-10 08:36:07 PDT
Comment on
attachment 63958
[details]
proposed patch Good.
Martin Robinson
Comment 3
2010-08-10 09:38:47 PDT
I think it might be good to make these icons members of the RenderTheme, much like the images used for media buttons. What do you think?
Gustavo Noronha (kov)
Comment 4
2010-08-10 09:49:53 PDT
Oops, sorry Martin, I just landed
r65074
before reading your comment. I thought about doing it that way, but I didn't really see advantages to adding the complexity, do you see any advantage in having member variables?
Gustavo Noronha (kov)
Comment 5
2010-08-10 09:50:32 PDT
Comment on
attachment 63958
[details]
proposed patch Landed as
r65074
. I'm leaving the bug open while we explore Martin's suggestion.
Martin Robinson
Comment 6
2010-08-11 16:21:08 PDT
The reason I suggested was in case we could track changes to the icon theme. Perhaps we cannot, but either way this could easily be a followup patch. I'll close this issue for now! :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug