2010-08-10  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

Reviewed by Xan Lopez.

        [GTK] Inputs of type 'search' have weird looking checkboxes instead of search/clear icons
        https://bugs.webkit.org/show_bug.cgi?id=43760

        Draw appropriate GTK+ stock images for search/clear icons in search entries.

        * platform/gtk/RenderThemeGtk.cpp:
        (WebCore::RenderThemeGtk::paintSearchFieldResultsButton):
        (WebCore::RenderThemeGtk::paintSearchFieldResultsDecoration):
        (WebCore::RenderThemeGtk::paintSearchFieldCancelButton):

Canonical link: https://commits.webkit.org/55876@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65074 268f45cc-cd09-0410-ab3c-d52691b4dbfc